--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<app-distancia></app-distancia>
-<br>
-<app-resistencia></app-resistencia>
-<br>
-<app-cinepolis></app-cinepolis>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
