--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,6 +17,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLinkActive="active" routerLink="Resistencia">Resistencia</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="Pizzas">Pizzas</a>
+          </li>
         </ul>
       </div>
   </nav>
